--- a/css/master.css
+++ b/css/master.css
@@ -2,8 +2,16 @@
   padding: 0;
   margin:0;
 }
+#contenido{
+  padding: 0;
+}
 #home{
   background: url("../img/home.jpg");
-  background-size: contain;
+  background-size: cover;
   width: 100%;
+  height: 400px;
+  margin:0;
+}
+#navbar{
+  background : #166d8a;
 }
