--- a/css/master.css
+++ b/css/master.css
@@ -1,17 +1,43 @@
 *{
   padding: 0;
   margin:0;
+  color: white;
+}
+body{
+  background-color: #077876;
 }
 #contenido{
   padding: 0;
 }
+.row{
+  margin: 0;
+}
 #home{
-  background: url("../img/home.jpg");
+  background: url("../img/home1.jpg");
   background-size: cover;
   width: 100%;
   height: 400px;
   margin:0;
 }
+#about, #portfolio, #contact{
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+#about{
+  background-color: #264B51;
+}
 #navbar{
   background : #166d8a;
+  position: sticky;
+  top:0;
+}
+#name, #profile{
+  color: white;
+}
+#name{
+  border-bottom: solid 3px #fdd741;
+  display: inline;
+}
+.titulo1{
+  border-bottom: solid 3px #24b4a5;
 }
